# vision

./: .gitignore  .prototools  AGENTS.md  DEV_SCRATCHPAD.md  README.md  ROADMAP.md  biome.json  biome.jsonc  bunfig.toml  features.json  package.json  prd.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: bun.yml
apps/vision-web/: .gitignore  AGENTS.md  README.md  biome.jsonc  components.json  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
apps/vision-web/docs/: issue-2-ui-cleanup-checklist.md
apps/vision-web/src/: App.tsx  index.css  main.tsx
apps/vision-web/tests/: visual.e2e.ts
apps/web/: index.html  moon.yml  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: app.spec.ts  visual.spec.ts
apps/web/src/: App.tsx  main.tsx
crates/: Cargo.toml  moon.yml
crates/engine/: Cargo.toml
crates/engine-core/: AGENTS.md  README.md
crates/engine-wasm/: AGENTS.md  README.md
crates/engine/benches/: parity_bench.rs  stitch_bench.rs
crates/engine/fixtures/parity/: README.md
crates/engine/fixtures/parity/baselines/inkstitch/: zigzag_30.metrics.json
crates/engine/fixtures/parity/designs/: simple_line.export_design.json
crates/engine/fixtures/parity/metrics/vision/: right_angle_10x10.metrics.json  simple_line.metrics.json  straight_20.metrics.json
crates/engine/fixtures/parity/running_paths/: right_angle_10x10.running_path.json  straight_20.running_path.json  zigzag_30.running_path.json
crates/engine/src/: command.rs  constants.rs  export_pipeline.rs  lib.rs  path.rs  scene.rs  shapes.rs  state.rs  svg.rs  thread.rs  types.rs  wasm.rs
crates/engine/src/format/: dst.rs  mod.rs  pec.rs  pes.rs
crates/engine/src/stitch/: fill.rs  mod.rs  running.rs  satin.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: camera.rs  gpu.rs  lib.rs  mesh.rs  shader.wgsl  vertex.rs
docs/: plugin-system.md  roadmap.md
plugins/format-pes/: AGENTS.md  README.md  package.json
plugins/hello/: AGENTS.md  README.md  package.json
plugins/stitch-running/: AGENTS.md  README.md  package.json
plugins/stitch-satin/: AGENTS.md  README.md  package.json
plugins/stitch-tatami/: AGENTS.md  README.md  package.json
scripts/: check-phase0.sh  check-phase1-gate.sh  check-phase1-parity.sh  check-production-gate.sh  compare-parity.sh  compare_parity.py  gen-inkstitch-baseline.sh  gen-vision-parity-metrics.sh  inkstitch_to_export_design.py
(+51 files in other folders)
