[workspace]
resolver = "2"
members = ["engine", "renderer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "GpuCanvasContext",
    "OffscreenCanvas",
] }
log = "0.4"
wasm-logger = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = "0.29"
bytemuck = { version = "1", features = ["derive"] }
wgpu = { version = "24", features = ["webgl"] }
svgtypes = "0.15"
roxmltree = "0.20"
