[package]
name = "vision-engine"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
log.workspace = true
wasm-logger.workspace = true
serde.workspace = true
serde_json.workspace = true
svgtypes.workspace = true
roxmltree.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stitch_bench"
harness = false

[[bench]]
name = "parity_bench"
harness = false
