[package]
name = "vision-renderer"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
log.workspace = true
wasm-logger.workspace = true
bytemuck.workspace = true
serde_json.workspace = true
wgpu.workspace = true
vision-engine = { path = "../engine" }
